--- a/app/src/main/res/layout/activity_strategy1.xml
+++ b/app/src/main/res/layout/activity_strategy1.xml
@@ -8,10 +8,11 @@
 
     <TextView android:text="Time between updates" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_marginTop="56dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textView" />
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -19,19 +20,18 @@
         android:inputType="number"
         android:ems="10"
         android:id="@+id/configText"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_toRightOf="@+id/textView"
         android:layout_marginLeft="41dp"
-        android:layout_marginStart="41dp"
-        android:text="number" />
+        android:layout_marginTop="43dp"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OK"
         android:id="@+id/okBtn"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp" />
+        android:layout_marginTop="23dp"
+        android:layout_below="@+id/configText"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
