--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,8 +36,8 @@
         android:layout_height="wrap_content"
         android:text="Strategy 4"
         android:id="@+id/strategy4Button"
+        android:layout_marginTop="28dp"
         android:layout_below="@+id/strategy3Button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="67dp" />
+        android:layout_alignStart="@+id/strategy3Button" />
 
 </RelativeLayout>
