--- a/app/src/main/res/layout/activity_strategy3.xml
+++ b/app/src/main/res/layout/activity_strategy3.xml
@@ -38,8 +38,17 @@
         android:layout_height="wrap_content"
         android:text="Start"
         android:id="@+id/startButton"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="46dp"
         android:layout_below="@+id/speedText"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log"
+        android:id="@+id/logButton"
+        android:layout_below="@+id/startButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp" />
 
 </RelativeLayout>
