--- a/app/src/main/res/layout/activity_strategy1.xml
+++ b/app/src/main/res/layout/activity_strategy1.xml
@@ -34,4 +34,13 @@
         android:layout_below="@+id/configText"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log"
+        android:id="@+id/logButton"
+        android:layout_below="@+id/okBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="82dp" />
+
 </RelativeLayout>
