--- a/app/src/main/res/layout/activity_strategy2.xml
+++ b/app/src/main/res/layout/activity_strategy2.xml
@@ -26,6 +26,14 @@
         android:layout_alignParentStart="true"
         android:text="DIST_Filtering" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log"
+        android:id="@+id/logButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="68dp" />
 
 
 </RelativeLayout>
