--- a/app/src/main/res/layout/activity_strategy4.xml
+++ b/app/src/main/res/layout/activity_strategy4.xml
@@ -14,4 +14,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="167dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log"
+        android:id="@+id/logButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="90dp" />
+
 </RelativeLayout>
