--- a/app/src/main/res/layout/activity_strategy4.xml
+++ b/app/src/main/res/layout/activity_strategy4.xml
@@ -6,13 +6,25 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.pervasive2.pervasive2.Strategy4">
 
-    <TextView android:text="SHAKE IT BABY!" android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/abe"
-        android:textSize="40dp"
+        android:text="Distance"
+        android:textSize="50dp"
+        android:id="@+id/textView2"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="167dp" />
+        android:layout_marginTop="49dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/editText"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="38dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -22,5 +34,13 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="90dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GO"
+        android:id="@+id/btn"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
