--- a/app/src/main/res/layout/activity_strategy2.xml
+++ b/app/src/main/res/layout/activity_strategy2.xml
@@ -7,25 +7,6 @@
     tools:context="com.pervasive2.pervasive2.Strategy2">
 
 
-
-
-    <SeekBar
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/distanceSetting"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/distanceSettingView"
-        android:layout_below="@+id/distanceSetting"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="DIST_Filtering" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,6 +15,34 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="68dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Strategy 2"
+        android:id="@+id/textView2"
+        android:layout_marginTop="90dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/distanceText"
+        android:text="Distance Interval"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="74dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:id="@+id/startButton"
+        android:layout_below="@+id/distanceText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="57dp" />
 
 
 </RelativeLayout>
